--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">3dTicTacToe 2016</string>
+    <string name="title_activity_menu">Menu</string>
 </resources>
