Integrated Math Game and Number Compare

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">3dTicTacToe 2016</string>
+    <string name="app_name">Mini-Games</string>
     <string name="largestvaluequestion">Which Value is the Largest?</string>
 </resources>
